--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         path: examples/*.pdf
         
     - name: Deploy to Firebase
-      uses: FirebaseExtended/action-hosting-deploy@v0
+      uses: w9jds/firebase-action@master
       with:
         appId: ${{secrets.FIREBASE_APP_ID}}
         token: ${{secrets.FIREBASE_TOKEN}}
