--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,15 @@ jobs:
 
     - name: Compile
       run: make
-
-    - uses: actions/upload-artifact@v3
+      
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: examples
+        path: examples/*.pdf
+        
+    - name: Download Artifact
+      uses: actions/download-artifact@master
       with:
         name: examples
         path: examples/*.pdf
@@ -24,6 +31,5 @@ jobs:
     - name: Deploy to Firebase
       uses: w9jds/firebase-action@master
       with:
-        appId: ${{secrets.FIREBASE_APP_ID}}
         FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
         file: examples/*.pdf
