pushed gh-pages forcely

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,15 +22,18 @@ jobs:
         name: examples
         path: examples/*.pdf
         
-    - name: Download Artifact
-      uses: actions/download-artifact@master
-      with:
-        name: examples
-        path: examples/*.pdf
-        
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      if: ${{ github.ref == 'refs/heads/main' }}
+    - name: Init new repo in dist folder and commit generated files
+      run: |
+        cd examples
+        git init
+        git add -A
+        git config --local user.email "action@github.com"
+        git config --local user.name "contact@maheshyadav.com.np"
+        git commit -m 'deploy'
+    - name: Force push to destination branch
+      uses: ad-m/github-push-action@v0.5.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+        branch: gh-pages
+        force: true
+        directory: ./examples
