--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,18 +22,18 @@ jobs:
         name: examples
         path: examples/*.pdf
         
-    - name: Init new repo in dist folder and commit generated files
+    - name: Deploy PDFs to gh-pages
       run: |
         cd examples
         git init
         git add -A
-        git config --local user.email "action@github.com"
-        git config --local user.name "contact@maheshyadav.com.np"
-        git commit -m 'deploy'
+        git config --local user.email "contact@maheshyadav.com.np"
+        git config --local user.name "cdcsit-maheshyadav"
+        git commit -m 'PDF Deploy'
     - name: Force push to destination branch
       uses: ad-m/github-push-action@v0.5.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
         force: true
-        directory: ./examples
+        directory: ./
