--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
         cd examples
         git init
         git add -A
-        git config --local user.email "contact@maheshyadav.com.np"
-        git config --local user.name "cdcsit-maheshyadav"
+        git config --local user.email "action@github.com"
+        git config --local user.name "contact@maheshyadav.com.np"
         git commit -m 'PDF Deploy'
     - name: Force push to destination branch
       uses: ad-m/github-push-action@v0.5.0
