--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,14 @@ jobs:
         cd examples
         git init
         git add -A
+        git config --global --add safe.directory /github/workspace
         git config --local user.email "contact@maheshyadav.com.np"
         git config --local user.name "cdcsit-maheshyadav"
         git commit -m 'PDF Deploy'
-    - name: Force push to destination branch
+    - name: Force push to destination branch 'gh-pages'
       uses: ad-m/github-push-action@v0.5.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: gh-pages2
+        branch: gh-pages
         force: true
         directory: ./
