--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         cd examples
         git init
-        git add -A
+        git add *.pdf
         git config --global --add safe.directory /github/workspace
         git config --local user.email "contact@maheshyadav.com.np"
         git config --local user.name "cdcsit-maheshyadav"
