--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         git config --global --add safe.directory /github/workspace
         git config --local user.email "contact@maheshyadav.com.np"
         git config --local user.name "cdcsit-maheshyadav"
-        git commit -m 'PDF Deploy on '+"$(date +"%D %T")"
+        git commit -m 'PDF Deployed on '$(date +"%D %T")'
     - name: Force push to branch 'gh-pages'
       uses: ad-m/github-push-action@v0.5.0
       with:
